[package]
name = "qtpcore"
version = "0.1.0"
edition = "2021"
authors = ["Porter Kowalski"]
description = "Qubit TopCoin (QTP) - Quantum-Resistant Cryptocurrency Node"

[dependencies]
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
sha3 = "0.10"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
rand = "0.8"
