[package]
name = "qtpcore"
version = "0.1.0"
edition = "2021"
authors = ["Porter Kowalski"]
description = "Qubit TopCoin (QTP) - Quantum-Resistant Cryptocurrency Node"

[dependencies]
# Post-quantum cryptography (FALCON-512)
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"

# SHA-3 hashing
sha3 = "0.10"

# Base58 address encoding
bs58 = "0.5"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# Timestamps
chrono = "0.4"

# Random number generation
rand = "0.8"

# HTTP server for node endpoints
actix-web = "4"

# HTTP client for peer communication
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Shared state between threads
tokio = { version = "1", features = ["full"] }
