[package]
name = "qtpcore"
version = "0.1.0"
edition = "2021"
authors = ["Porter Kowalski"]
description = "Qubit TopCoin (QTP) - Quantum-Resistant Cryptocurrency Node"
build = "build.rs"

[[bin]]
name = "qtpcore"
path = "src/main.rs"

[[bin]]
name = "send_tx"
path = "src/bin/send_tx.rs"

[[bin]]
name = "qtpwallet"
path = "src/bin/wallet_cli.rs"

[dependencies]
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
sha3 = "0.10"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
rand = "0.8"
actix-web = "4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
rpassword = "7"

[build-dependencies]
cc = "1.0"

[dependencies.actix-cors]
version = "0.7"
